--- a/NWOS.app/Contents/Resources/app.nw/apps/chrome.html
+++ b/NWOS.app/Contents/Resources/app.nw/apps/chrome.html
@@ -1,4 +1,45 @@
-<iframe src="http://www.baidu.com" frameborder="0" style="
-  width: 100%;
-  height: 100%;
-"></iframe>
+<style>
+  .chrome-tool-bar {
+    width: 100%;
+    height: 40px;
+    padding: 8px;
+    background: #f5f5f5;
+  }
+
+  .chrome-btn {
+    width: 24px;
+    height: 24px;
+    margin-right: 10px;
+    background: #d0d0d0;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  .chrome-btn:hover {
+    background: #ddd;
+  }
+
+  .chrome-address {
+    width: calc(100% - 164px);
+    height: 24px;
+    padding: 6px;
+    margin-right: 10px;
+    font-size: 12px;
+    line-height: 12px;
+    background: #fff;
+    border: 1px solid #aaa;
+  }
+
+  .chrome-iframe {
+    width: 100%;
+    height: calc(100% - 40px);
+  }
+</style>
+
+<div class="chrome-tool-bar">
+  <button class="chrome-btn chrome-back-btn" onclick="javascript:$('.chrome-iframe').contentWindow.history.back()">&lt;</button>
+  <button class="chrome-btn chrome-back-btn" onclick="javascript:$('.chrome-iframe').contentWindow.history.forward()">&gt;</button>
+  <button class="chrome-btn chrome-back-btn" onclick="javascript:$('.chrome-iframe').contentWindow.location.reload()">~</button>
+  <input type="text" class="chrome-address" value="http://www.baidu.com">
+  <button class="chrome-btn chrome-back-btn" onclick="javascript:$('.chrome-iframe').src = $('.chrome-address').value">+</button>
+</div>
+<iframe src="http://www.baidu.com" frameborder="0" class="chrome-iframe"></iframe>
