--- a/NWOS.app/Contents/Resources/app.nw/apps/chrome.html
+++ b/NWOS.app/Contents/Resources/app.nw/apps/chrome.html
@@ -4,18 +4,20 @@
     height: 40px;
     padding: 8px;
     background: #f5f5f5;
+    border-bottom: 1px solid #ddd;
   }
 
   .chrome-btn {
     width: 24px;
     height: 24px;
     margin-right: 10px;
-    background: #d0d0d0;
+    background: #ddd;
     border-radius: 50%;
     cursor: pointer;
+    color: #777;
   }
   .chrome-btn:hover {
-    background: #ddd;
+    background: #eee;
   }
 
   .chrome-address {
@@ -26,7 +28,7 @@
     font-size: 12px;
     line-height: 12px;
     background: #fff;
-    border: 1px solid #aaa;
+    border: 1px solid #bbb;
   }
 
   .chrome-iframe {
